# MultiModal-Lens

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Main_Demo.ipynb  Makefile  README.md  app.py  index.html  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml  release-check.yml
demos/: 01_quickstart.ipynb  02_attention_deep_dive.ipynb  03_mechanistic_probes.ipynb  04_faithfulness_testing.ipynb  05_comparing_models.ipynb
docs/: README.md  methodology.md  publishing_checklist.md  research_paper_draft.md  tested_model_matrix.md
scripts/: run_eval.py  run_mechanistic.py  run_preflight.py  test_clip_e2e.py  test_qwen2_vl_e2e.py  test_smolvlm_256m_e2e.py
src/multimodallens/: __init__.py  cli.py  config.py  exceptions.py  types.py
src/multimodallens/adapters/: base.py  blip2_adapter.py  clip_adapter.py  generic_adapter.py  llava_adapter.py
src/multimodallens/analysis/: activation_patching.py  alignment.py  attention.py  circuits.py  dla.py  faithfulness.py  hooking.py  induction.py  logit_lens.py  neurons.py  path_patching.py  probing.py  sae.py
src/multimodallens/core/: activation_cache.py  config_schema.py  factored_matrix.py  hook_point.py  hooked_vlm.py  hooks.py  pipeline.py  preflight.py  registry.py  weight_processing.py
src/multimodallens/data/: supported_models.json
src/multimodallens/eval/: runner.py
tests/: test_activation_cache.py  test_alignment_utils.py  test_attention_utils.py  test_cli.py  test_config_schema.py  test_dla.py  test_dla_correctness.py  test_exceptions.py  test_fine_grained_hooks.py  test_generation_and_probing.py  test_hooked_vlm.py  test_image_ops.py  test_integration.py  test_interactive_viz.py  test_mechanistic_features.py  test_path_patching.py  test_path_patching_correctness.py  test_phase3_advanced_circuits.py  test_preflight.py  test_registry_family_resolution.py
(+6 files in other folders)
