[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multimodallens"
version = "0.1.0"
description = "Interactive visualization and debugging toolkit for Hugging Face multimodal models"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "MultimodalLens Contributors" }]
license = "MIT"
keywords = ["multimodal", "vision-language", "xai", "interpretability", "transformers", "gradio"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.2.0",
  "transformers>=4.46.0",
  "accelerate>=0.30.0",
  "gradio>=4.44.0",
  "Pillow>=10.0.0",
  "numpy>=1.24.0",
  "matplotlib>=3.8.0",
  "pandas>=2.0.0",
  "scipy>=1.11.0",
  "einops>=0.8.0",
  "safetensors>=0.4.0"
]

[project.urls]
Homepage = "https://github.com/AKHegde22/Papers-C"
Repository = "https://github.com/AKHegde22/Papers-C"
Issues = "https://github.com/AKHegde22/Papers-C/issues"
Documentation = "https://github.com/AKHegde22/Papers-C/tree/main/1-2Tools/MMLens/docs"

[project.optional-dependencies]
bitsandbytes = ["bitsandbytes>=0.43.0"]

dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0"
]

publish = [
  "build>=1.2.2",
  "twine>=5.1.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true
